--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,14 @@
     "@langchain/core": "^1.1.7",
     "@langchain/groq": "^1.0.2",
     "@langchain/openai": "^1.2.0",
+    "@slack/web-api": "^7.13.0",
+    "@types/multer": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.0.2"
+    "mongoose": "^9.0.2",
+    "multer": "^2.0.2",
+    "pdf-parse": "^2.4.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
